test implement markdown for chakra

--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "chakra-ui-markdown-renderer": "^4.1.0",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "framer-motion": "^10.1.0",
+    "fs": "^0.0.1-security",
+    "gray-matter": "^4.0.3",
     "next": "13.2.3",
+    "path": "^0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "react-markdown": "^8.0.5"
   }
 }
