--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^10.1.0",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
+    "markdown-to-jsx": "^7.2.1",
     "next": "13.2.3",
     "path": "^0.12.7",
     "raw-loader": "^4.0.2",
