--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-ipynb-renderer": "^2.1.2",
+    "react-jupyter-notebook": "^0.4.0",
     "react-markdown": "^8.0.5",
     "react-router-dom": "^6.8.2"
   },
